<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgColorPrimary">

    <LinearLayout
        android:id="@+id/llNav"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/bgBlue"
        android:gravity="center_vertical">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navbar_icon_size"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_arrow"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_4"
            android:textColor="@color/white"
            android:text="@string/title_cart"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/llNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llCartDetails"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llListEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_2"
                android:textColor="@color/white"
                android:text="@string/empty_list"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llLoad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/rv_cart_item"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:layout_marginTop="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCartDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bgColorDark"
        app:layout_constraintTop_toBottomOf="@+id/llList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="100">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="50"
                android:gravity="left">
                <TextView
                    android:id="@+id/tvProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_2"
                    android:textColor="@color/white"
                    android:text="@string/products"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_4"
                    android:textColor="@color/white"
                    android:text="@string/total"
                    android:textAllCaps="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="50"
                android:gravity="right">
                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_2"
                    android:textColor="@color/white"
                    android:text="R$00,00"/>
                <TextView
                    android:id="@+id/tvTotalWithDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_4"
                    android:textColor="@color/white"
                    android:text="R$00,00"
                    android:textAllCaps="true"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_btn"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textAllCaps="false">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>